[package]
name = "drupal-lsp"
version = "0.0.1"
edition = "2021"
description = "Language Server for Drupal: hook, twig, service completion, PHPCS/PHPCBF/PHPStan diagnostics."
repository = "https://github.com/abderrahimghazali/drupal-lsp"
license = "Apache-2.0"

[[bin]]
name = "drupal-lsp"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "sync"] }
tower-lsp = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
walkdir = "2"

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
